--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -2,6 +2,8 @@
 
 * {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 body, html {
@@ -31,4 +33,29 @@ menu > ul > li > a {
     text-decoration: none;
     text-align: center;
     background-color: rgba(211, 211, 211, 0.626);
+    color: white;
+    border-top: 2px solid gray;
+}
+
+menu a:hover {
+    background-color: grey;
+}
+
+main {
+    width: 90vw;
+    background-color: white;
+    margin: auto;
+    padding: 10px;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+
+article h2 {
+    padding-bottom: 20px;
+}
+
+article p {
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 20px;
 }
